--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,124 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
     Arial, sans-serif;
-  margin: auto;
-  max-width: 38rem;
-  padding: 2rem;
+  padding: 0px;
+  margin: 0px;
+  height: 100vh;
+  background-color: black;
+}
+
+div {
+  margin: 0px;
+  padding: 0px;
+}
+
+.base-grid {
+  height: 100%;
+  display: grid;
+  grid-template-rows: auto 1fr;
+  overflow: hidden;
+}
+
+h1,h2,h3,h4,h5,h6 {
+  padding: 5px;
+  margin: 0px;
+  text-align: center;
+  color: white;
+}
+
+.container {
+  background-color: rgb(56, 56, 56);
+  border-radius: 10px;
+  margin: 10px;
+}
+
+.overview-grid {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-gap: 10px;
+  padding: 20px 10px;
+  overflow: auto;
+}
+
+.button-container {
+  display: grid;
+  grid-template-rows: 1fr auto;
+  text-align: center;
+}
+
+.button-container i {
+  font-size: 50px;
+}
+
+.overview-grid .button-container {
+  align-self: start;
+}
+
+.user-button {
+  padding: 10px;
+  margin: 0px 10px 10px 10px;
+  background-color: rgb(73, 158, 255);
+  border-style: none;
+  border-radius: 10px;
+}
+
+.notepad-grid {
+  height: 100%;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+}
+
+.header-grid {
+  display: grid;
+  grid-template-columns: min-content 1fr;
+  padding: 0 20px;
+  margin: 0; /* Remove default margin on the body or parent container */
+}
+
+.header-grid h1 {
+  text-align: left;
+  margin: 0; /* Remove default margin for h1 */
+}
+
+.back-button {
+  margin: 5px 5px 0px 0px;
+}
+
+textarea {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
+  Arial, sans-serif;
+  background-color: #252525;
+  color: #9593D9;
+  resize: none;
+  flex: 1;
+  border-radius: 10px;
+  border-style: none;
+  padding: 10px;
+  outline: none; /* Remove the focus outline */
+}
+
+.slim-button {
+  background-color: transparent;
+  border-style: none;
+  color: white
+}
+
+
+
+
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+  background: #a73f3f;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
 }
