--- a/src/index.css
+++ b/src/index.css
@@ -209,6 +209,32 @@ textarea.wrapping {
 
 
 
+
+
+
+.context-menu {
+  display: none;
+  position: absolute;
+  background-color: #2b2b2b;
+  border: 1px solid #11a7d4;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+  color: rgb(218, 218, 218);
+  padding: 8px;
+  z-index: 1000;
+}
+
+.context-menu-item {
+  padding: 8px;
+  cursor: pointer;
+}
+
+.context-menu-item:hover {
+  background-color: #e0e0e0;
+}
+
+
+
+
 ::-webkit-scrollbar {
   width: 6px;
 }
